Updated Readmeto. Addes comments to the CSS. Updated some of the CSS to be more user friendly.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#Work">Work</a></li>
         <li><a href="#Contact-Me">Contact Me</a></li>
-        <li><a href="./Resume 2.12.2021.pdf">Resume</a></li>
+        <li><a href="./Resume 10.4.2021 short v2.pdf">Resume</a></li>
     </ul>
 </nav>
 </header>
@@ -49,7 +49,7 @@
             <img src="./local.JPG" alt="Puzzle" style="width:100%"/>
             <section class="first">
                 <p>Local (Project 1)</p>
-                <a href="https://www.spotify.com/us/"><p>Repo</p></a>
+                <a href="https://github.com/ericdavidanderson/Local.git"><p>Repo</p></a>
             </section
             ></a>
         </section>
@@ -60,7 +60,7 @@
             <img src="./workDayPlanner.JPG" alt="Calculator" class="float-left" style="width:100%"/> 
             <section class="LS1">
                <p>Work Day Planner</p> 
-               <a href="https://www.spotify.com/us/"><p>Repo</p></a>
+               <a href="https://github.com/cj8355/Work-Day-Planner.git"><p>Repo</p></a>
             </section>
         </a>
         </section>
@@ -71,7 +71,7 @@
                 <img src="./codeQuiz.JPG" alt="chess" class="float-right" style="width:100%"/> 
                 <section class="RS1">
                     <p>Code quiz</p>
-                    <a href="https://www.spotify.com/us/"><p>Repo</p></a>
+                    <a href="https://github.com/cj8355/Code_Quiz.git"><p>Repo</p></a>
                 </section>
             </a>
             
@@ -106,7 +106,7 @@
     <li>charlescallender.cc@gmail.com</li>
     <li><a href="https://github.com/cj8355">Github</a></li>
     <li><a href="https://www.linkedin.com/in/charles-callender-043b3886/">LinkedIn</a></li>
-    <li><a href="./Resume 2.12.2021.pdf">Resume</a></li>
+    <li><a href="./Resume 10.4.2021 short v2.pdf">Resume</a></li>
     <!--<li><a href="https://www.spotify.com/us/">Spotify</a></li>-->
 </ul>
 </section>
